[package]
name = "new-api-rs"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Bader"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["tracing", "http2"] }
clap = { version = "4.3.19", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
displaydoc = "0.2.4"
human-panic = "1.1.5"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
